--- a/Blase.Core/Blase.Core.csproj
+++ b/Blase.Core/Blase.Core.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
         <PackageReference Include="Dapper" Version="2.0.35" />
+        <PackageReference Include="System.Interactive.Async" Version="4.1.1" />
     </ItemGroup>
 
 </Project>
