--- a/Blase.Server/ClientApp/package.json
+++ b/Blase.Server/ClientApp/package.json
@@ -3,22 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^4.6.2",
     "bootstrap": "^4.1.3",
-    "jquery": "^3.4.1",
-    "merge": "^1.2.1",
     "moment": "^2.27.0",
-    "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-bootstrap": "^0.25.0",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "reactstrap": "^8.4.1",
-    "rimraf": "^2.6.2",
     "swr": "^0.3.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.48",
+    "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/reactstrap": "^8.5.1",
@@ -31,6 +29,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "nan": "^2.14.1",
+    "rimraf": "^2.6.2",
     "typescript": "^3.7.5"
   },
   "eslintConfig": {
