--- a/Blase.Server/ClientApp/package.json
+++ b/Blase.Server/ClientApp/package.json
@@ -3,15 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^4.6.2",
-    "bootstrap": "^4.1.3",
+    "@chakra-ui/core": "^1.0.0-rc.3",
     "moment": "^2.27.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
-    "reactstrap": "^8.4.1",
     "swr": "^0.3.1"
   },
   "devDependencies": {
@@ -19,7 +17,6 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
-    "@types/reactstrap": "^8.5.1",
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
     "eslint": "^6.8.0",
@@ -28,9 +25,8 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
-    "nan": "^2.14.1",
     "rimraf": "^2.6.2",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.0"
   },
   "eslintConfig": {
     "extends": "react-app"
