--- a/Blase.Server/ClientApp/package.json
+++ b/Blase.Server/ClientApp/package.json
@@ -7,6 +7,7 @@
     "moment": "^2.27.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-infinite-scroll-component": "^5.0.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
