--- a/Blase.Server/ClientApp/package.json
+++ b/Blase.Server/ClientApp/package.json
@@ -3,45 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/core": "^1.0.0-rc.3",
+    "@tailwindcss/typography": "^0.2.0",
     "dayjs": "^1.8.35",
+    "rc-tooltip": "^4.2.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-icons": "^3.11.0",
     "react-infinite-scroll-component": "^5.0.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
-    "react-virtualized": "^9.22.2",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "swr": "^0.3.1"
+    "react-scripts": "^3.4.3",
+    "react-tooltip": "^4.2.10",
+    "swr": "^0.3.1",
+    "tailwindcss": "^1.8.6"
   },
   "devDependencies": {
+    "@craco/craco": "^5.6.4",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
-    "@types/react-virtualized": "^9.21.10",
-    "@types/react-virtualized-auto-sizer": "^1.0.0",
-    "ajv": "^6.9.1",
-    "cross-env": "^5.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-plugin-flowtype": "^4.6.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
-    "rimraf": "^2.6.2",
+    "postcss-nested": "^4.2.3",
     "typescript": "^3.8.0"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "scripts": {
-    "start": "rimraf ./build && react-scripts start",
-    "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "start": "craco start",
+    "build": "craco build"
   },
   "browserslist": {
     "production": [
